# MemoryPilot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  push_transcript.js
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: gen_banner.py  gen_benchmark_chart.py  gen_demo.py
src/: ann.rs  chunker.rs  code_chunker.rs  db.rs  embedding.rs  fts.rs  gc.rs  graph.rs  http.rs  main.rs  protocol.rs  query_expansion.rs  reranking.rs  session_capsule.rs  session_export.rs  session_fusion.rs  splitter.rs  stemming.rs  telemetry.rs  tools.rs  watcher.rs  working_memory.rs
src/db/: benchmark.rs  benchmark_fr.rs  benchmark_longmemeval.rs  compaction.rs  embed_worker.rs  export.rs  schema.rs  transcript.rs
