[package]
name = "memory-pilot"
version = "4.0.0"
edition = "2021"
authors = ["SOFLUTION LTD"]
description = "God-Tier MCP memory server — Hybrid search (BM25+fastembed RRF), Temporal Knowledge Graph, GC, Project Brain, File Watcher, HTTP server."
license = "Apache-2.0"
repository = "https://github.com/Soflution1/MemoryPilot"
keywords = ["mcp", "memory", "sqlite", "cursor", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "MemoryPilot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = { version = "6", features = ["macos_kqueue"] }
fastembed = "5"
tiny_http = { version = "0.12", optional = true }

[features]
default = []
http = ["tiny_http"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
