[package]
name = "memory-pilot"
version = "4.0.0"
edition = "2021"
authors = ["SOFLUTION LTD"]
description = "God-Tier MCP memory server — Hybrid search (BM25 + multilingual-e5-small RRF), 100+ languages, Temporal Knowledge Graph, GC, Project Brain, File Watcher, HTTP server."
license-file = "LICENSE"
repository = "https://github.com/Soflution1/MemoryPilot"
keywords = ["mcp", "memory", "sqlite", "cursor", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "MemoryPilot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = { version = "6", features = ["macos_kqueue"] }
fastembed = "5"
tiny_http = { version = "0.12", optional = true }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-rust = { version = "0.24.2", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }

[features]
default = ["code-aware-chunking"]
http = ["tiny_http"]
code-aware-chunking = [
    "tree-sitter",
    "tree-sitter-rust",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-javascript",
]
tree-sitter = ["dep:tree-sitter"]
tree-sitter-rust = ["dep:tree-sitter-rust"]
tree-sitter-python = ["dep:tree-sitter-python"]
tree-sitter-typescript = ["dep:tree-sitter-typescript"]
tree-sitter-javascript = ["dep:tree-sitter-javascript"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
